--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Angel Capacho Portfolio</h1>
-						<p>Some projects using core skills like Power BI, SQL, and Excel<a href="https://www.linkedin.com/in/angel-capacho-6b200b347/"> @LinkedIn</a>.</p>
+						<p>Some projects using core skills like Power BI, T-SQL, MySQL, and Excel. Just click on one of the projects to see the others of its type<a href="https://www.linkedin.com/in/angel-capacho-6b200b347/"> @LinkedIn</a>.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -66,12 +66,12 @@
 								<article>
 									<header>
 										
-										<h2><a href="https://github.com/AngelC-A/Microsoft-Excel/blob/main/Bike_Buyers.pdf">Bike Sales in Microsoft Excel<br /></a></h2>
+										<h2><a href="https://github.com/AngelC-A/Microsoft-Excel/blob/main/coffeeOrdersData.pdf">Type of Coffe Sales in Microsoft Excel<br /></a></h2>
 									</header>
-									<a href="https://github.com/AngelC-A/Microsoft-Excel/blob/main/Bike_Buyers.pdf" class="image fit"><img src="images/bike.jpg" alt="" /></a>
-									<p>Cleaning, analysis, and a visual out of a bike sales dataset in Microsoft Excel.</p>
+									<a href="https://github.com/AngelC-A/Microsoft-Excel/blob/main/coffeeOrdersData.pdf" class="image fit"><img src="images/Coffe.jpg" alt="" /></a>
+									<p>We can see the type of coffe that sells the most, and another things. Pretty amazing project.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/AngelC-A/Microsoft-Excel/blob/main/Bike_Buyers.pdf" class="button">View Project</a></li>
+										<li><a href="https://github.com/AngelC-A/Microsoft-Excel/blob/main/coffeeOrdersData.pdf" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
