--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
 								<article>
 									<header>
 										
-										<h2><a href="https://github.com/AngelC-A/Power-BI/blob/main/Data%20Professional%20Survey.pdf">Data Jobs Survey Power BI<br />
+										<h2><a href="https://github.com/AngelC-A/Power-BI/blob/main/Performance_Report.pdf">Data Jobs Survey Power BI<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/AngelC-A/Power-BI/blob/main/Data%20Professional%20Survey.pdf" class="image fit"><img src="images/survey.jpg" alt="" /></a>
+									<a href="https://github.com/AngelC-A/Power-BI/blob/main/Performance_Report.pdf" class="image fit"><img src="images/profit.jpeg" alt="" /></a>
 									<p>Cleaning, analysis, and a visual out of a survey about data related jobs in Power BI.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/AngelC-A/Power-BI/blob/main/Data%20Professional%20Survey.pdf" class="button">View Project</a></li>
+										<li><a href="https://github.com/AngelC-A/Power-BI/blob/main/Performance_Report.pdf" class="button">View Project</a></li>
 									</ul>
 								</article>
 
