--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 										<h2><a href="https://github.com/AngelC-A/Power-BI/blob/main/Performance_Report.pdf">Data Jobs Survey Power BI<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/AngelC-A/Power-BI/blob/main/Performance_Report.pdf" class="image fit"><img src="images/profit.jpeg" alt="" /></a>
+									<a href="https://github.com/AngelC-A/Power-BI/blob/main/Performance_Report.pdf" class="image fit"><img src="images/profitt.jpeg" alt="" /></a>
 									<p>Cleaning, analysis, and a visual out of a survey about data related jobs in Power BI.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/AngelC-A/Power-BI/blob/main/Performance_Report.pdf" class="button">View Project</a></li>
