--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
 								<article>
 									<header>
 										
-										<h2><a href="https://github.com/AngelC-A/Power-BI/blob/main/Performance_Report.pdf">Performance Report in Power BI<br />
+										<h2><a href="https://github.com/AngelC-A/Power-BI/blob/main/Performance_Report.pdf"> Performance Report in Power BI<br />
 										</a></h2>
 									</header>
 									<a href="https://github.com/AngelC-A/Power-BI/blob/main/Performance_Report.pdf" class="image fit"><img src="images/profit.jpeg" alt="" /></a>
-									<p>Year-to-Date and Prior-Year-to-Date analysis and visual in Power BI.</p>
+									<p>We can analyze the year to date and prior year to date of a company around the world.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/AngelC-A/Power-BI/blob/main/Performance_Report.pdf" class="button">View Project</a></li>
 									</ul>
