--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 									
 									<h2><a href="https://github.com/AngelC-A/SQL/blob/main/retail.sql">Retail Data in SQL Server<br />
 									</a></h2>
-									<p>Cleaning, and analysis in retail data, customers related stuff, products, and profi</p>
+									<p>Cleaning, and analysis in retail data, customers related stuff, products, and profit</p>
 								</header>
 								<a href="https://github.com/AngelC-A/SQL/blob/main/retail.sql" class="image main"><img src="images/retail.jpg" alt="" /></a>
 								<ul class="actions special">
