--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Angel Capacho Portfolio</h1>
-						<p>Some projects using core skills like Power BI, T-SQL, MySQL, and Excel, Focus on retail/bussiness data. Just click on one of the projects to see the others of its type<a href="https://www.linkedin.com/in/angel-capacho-6b200b347/"> @LinkedIn</a>.</p>
+						<p>Some projects using core skills like Power BI, T-SQL, MySQL, and Excel, Focus on retail/bussiness data. Just click on one of the projects to see the others of its type.<a href="https://www.linkedin.com/in/angel-capacho-6b200b347/"> @LinkedIn</a>.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -53,7 +53,7 @@
 									
 									<h2><a href="https://github.com/AngelC-A/SQL/blob/main/retail.sql">Retail Data in SQL Server<br />
 									</a></h2>
-									<p>Cleaning, and analysis in retail data, customers related stuff, products, and profit</p>
+									<p>Cleaning, and analysis in retail data, customers related stuff, products, and profit.</p>
 								</header>
 								<a href="https://github.com/AngelC-A/SQL/blob/main/retail.sql" class="image main"><img src="images/retail.jpg" alt="" /></a>
 								<ul class="actions special">
